<resources>
    <string name="app_name">Appointment Scheduler</string>
    <string name="email_id_hint">Enter your email id</string>
    <string name="pass_hint">Enter Password</string>
    <string name="forget_pass_text">Forget Password?</string>
    <string name="reenter_pass_hint">ReEnter Password</string>
    <string name="some_wrong">Something went wrong!</string>
    <string name="some_wrong_try_again">Something went wrong.!,Please try again</string>
    <string name="try_again">Please try again</string>
    <string name="loading">Loading…</string>
    <string name="reset_pass_text">Reset Password</string>
    <string name="home_label">Home</string>
    <string name="history_label">History</string>
    <string name="profile_label">My Profile</string>
    <string name="setting_label">Setting</string>
    <string name="no_upcoming_appointment_text">There is no upcoming Appointment</string>
    <string name="also_show_text">Also show</string>
    <string name="no_history_text">No appointment history</string>
    <string name="permanent_code_hint">Enter Your code</string>
    <string name="have_account_text">Do you have an account?Login here</string>
    <string name="sign_up_text">Don\'t have account?Sign up</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="no_available_slot_text">No Available Time slot set for selected date</string>
    <string name="select_date_for_slot">Please Select Date to see available slots</string>
    <string name="slot_fetch_up">Please Wait…,Slots are fetching up from server</string>
    <string name="appointment_txt">Make Appointment</string>
    <string name="logout_txt">Logout</string>
    <string name="show_event_time">%1$s To %2$s</string>
    <string name="appointment_schedule_with">Your appointment schedule with  %1$s  on</string>
    <string name="appointment_schedule_on">Your appointment schedule on</string>
    <string-array name="time_slots_days">
        <item>Weekend</item>
        <item>weekdays</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="notification_msg">
        Your Appointment with %1$s scheduled for %2$s on %3$s at %4$s.
    </string>
</resources>