<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_img"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/schdule_appotionment_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_name_text"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        android:textColor="@color/green_msg"
        android:elevation="3dp"
        android:layout_marginBottom="@dimen/_15sdp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/logo_img"
        app:layout_constraintBottom_toTopOf="@id/login_card"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:clipToPadding="false"
        app:cardCornerRadius="@dimen/_5sdp"
        app:contentPadding="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/card_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_tip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/email_id_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_tip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/pass_hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpass_tip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/reenter_pass_hint"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cpass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_inp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/name_hint"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_tip"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/permanent_code_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="2dp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="Login" />-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:elevation="@dimen/_4sdp"
        android:paddingVertical="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/login_card"
        app:layout_constraintEnd_toEndOf="@id/login_card"
        app:layout_constraintStart_toStartOf="@id/login_card"
        app:layout_constraintTop_toBottomOf="@id/login_card"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forget_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/forget_pass_text"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_7sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/sign_up_text"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/forget_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/version_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    <com.google.android.material.progressindicator.CircularProgressIndicator-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/load_pg"-->
    <!--        android:indeterminate="true"-->
    <!--        android:elevation="@dimen/_7sdp"-->
    <!--        android:visibility="gone"-->
    <!--        style="@style/Widget.MaterialComponents.CircularProgressIndicator"-->
    <!--        android:outlineProvider="background"-->
    <!--        app:showAnimationBehavior="outward"-->
    <!--        app:showDelay="2"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <include
        android:id="@+id/load_pg"
        layout="@layout/layout_progress_indicator"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/trans_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone"
        android:elevation="3dp"
        android:background="@color/transparent_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>