<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_img"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/schdule_appotionment_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forget_card"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/app_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="italic|bold"
        android:textColor="@color/green_msg"
        android:elevation="3dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/logo_img"
        app:layout_constraintBottom_toTopOf="@id/forget_card"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/forget_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:clipToPadding="true"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="5dp"
        app:contentPadding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_inp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id_hint"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/msg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:text="Your Password rest is send to your email Id"
                android:textAlignment="center"
                android:textColor="@color/green_msg"
                android:textSize="16sp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:elevation="2dp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/reset_pass_text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/version_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/load_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        android:paddingVertical="@dimen/_10sdp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/_10sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>